--- a/main.css
+++ b/main.css
@@ -5,6 +5,8 @@
  * Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
  */
 /*! modern-normalize v3.0.1 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/*! modern-normalize v3.0.1 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/* prettier-ignore */
 *,::after,::before{box-sizing:border-box}html{font-family:system-ui,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';line-height:1.15;-webkit-text-size-adjust:100%;tab-size:4}body{margin:0}b,strong{font-weight:bolder}code,kbd,pre,samp{font-family:ui-monospace,SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}table{border-color:currentcolor}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}legend{padding:0}progress{vertical-align:baseline}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}
 /*# sourceMappingURL=/sm/d2d8cd206fb9f42f071e97460f3ad9c875edb5e7a4b10f900a83cdf8401c53a9.map */
 
@@ -38,7 +40,7 @@
 }
 
 html {
-  font-family: 'Maven Pro', sans-serif;
+  font-family: "Maven Pro", sans-serif;
   letter-spacing: 0.025em;
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
@@ -85,6 +87,7 @@ p {
   margin: 0 auto;
   max-width: var(--md);
   padding: var(--spacing-lg);
+  position: relative;
 }
 
 .container:not(:last-child) {
@@ -105,7 +108,7 @@ p {
 }
 
 header.hero {
-  background: center / cover no-repeat url('images/matrix-background.jpg')
+  background: center / cover no-repeat url("images/matrix-background.jpg")
     rgba(0, 0, 0, 0.5);
   background-attachment: fixed;
   color: white;
@@ -115,6 +118,14 @@ header.hero {
   padding-top: var(--spacing-md);
   padding-bottom: var(--spacing-md);
   position: relative;
+}
+
+.frost-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
 }
 
 header.hero p.headline a {
